# pydemo

./: .gitignore
dashu_alpha_API/: config.ini  dbcon.py  handle_contract_dbcon.py  readme.md  start.py  start.ui
dic/: dic.py
fast_api/: main.py
finance/: main.py
make_key/: main.py
mqtt/: mqtt_demo.py
pandas/: 221012-022.xls  rdtest1.py  rdtest2.py
pySide/: start1.py  start1.ui  tem1.py  test1.ui
pyprint/: config.ini  print1.py  readme.md
py浏览器/: main.py
socket-test/: http-server1.py  udp-recive.py  udp-send.py
sqlalchemy2/: create_person.py  main.py  nfx.py  useMapped.py
tests/: app.py  mose.py  runfaser.py  tiaoshi.py
to_excel/: out1.py  out1.xlsx
wireguard_tunnel_service/: .gitignore  README.md  pyproject.toml
wireguard_tunnel_service/config/: settings.toml
wireguard_tunnel_service/doc/: WireguardTunnelService.md
wireguard_tunnel_service/scripts/: build.ps1
wireguard_tunnel_service/src/wireguard_tunnel_service/: __init__.py  main.py  ui_app.py
wireguard_tunnel_service/src/wireguard_tunnel_service/core/: __init__.py  config.py  health_checker.py  models.py  monitor_service.py  reconnect_policy.py  state_store.py  wireguard_controller.py
wireguard_tunnel_service/src/wireguard_tunnel_service/infra/: logging_config.py
wireguard_tunnel_service/src/wireguard_tunnel_service/ui/: __init__.py  main_window.py  monitor_worker.py  single_instance.py  tray.py
wireguard_tunnel_service/tests/unit/: test_config.py  test_health_checker.py  test_monitor_service.py  test_reconnect_policy.py  test_wireguard_controller.py
元组/: t.py
函数/: f.py
(+50 files in other folders)
